fix: loader very small screen spacing

--- a/src/scss/components/_loader.scss
+++ b/src/scss/components/_loader.scss
@@ -14,6 +14,7 @@
     flex-direction: column;
     align-items: center;
     gap: 30px;
+    padding: 16px;
     .MuiCircularProgress-root {
       color: $white;
     }
